--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "author": "Àlex Castelo Martínez",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "vite": "^2.9.14"
+  },
   "devDependencies": {
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "prettier": "2.7.1",
-    "vite": "^2.9.14"
+    "prettier": "2.7.1"
   }
 }
